# cxr

./: .gitignore  Dockerfile  GITHUB_SETUP.md  Makefile  README.md  REPRODUCIBILITY.md  TECHNICAL_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: default.yaml
examples/: api_usage.py
models/: best_hyperparameters.json
reports/metrics/: data_quality_report.json  eda_class_summary.csv  eda_summary_stats.csv  edge_analysis.csv  evaluation_report.json  explainability_analysis.json  exposure_analysis.csv  robustness_evaluation.json  texture_analysis.csv
src/: __init__.py  utils.py
src/data/: dataset.py  eda.py  eda_enhanced.py  prepare_data.py
src/deployment/: __init__.py  api.py  compute_training_stats.py
src/evaluation/: __init__.py  evaluate.py  robustness.py
src/explainability/: __init__.py  gradcam.py
src/models/: __init__.py  losses.py  model.py  train.py
static/: index.html
tests/: __init__.py  test_api.py
